umap/static/umap/map.css
/* ... */
.umap-drop-icon .icon-container img {
    vertical-align: middle;
    max-width: 24px !important;
    max-height: 24px !important;
}

.umap-div-icon .icon-container span,
.umap-drop-icon .icon-container span {
    vertical-align: middle;
    font-weight: bold;
}

.umap-circle-icon {
    border: 2px solid white;
    border-radius: 50%;
    height: 12px;
    width: 12px;
}

.umap-circle-icon.umap-icon-active {
    opacity: 1.0 !important;
    height: 16px;
    width: 16px;
}

.umap-large-circle-icon {
    border: 2px solid white;
    background-color: white;
    border-radius: 50%;
    height: 36px;
    width: 36px;
    box-shadow: black 0px 0px 1px;
    display: flex;
    align-content: center;
}

.umap-large-circle-icon.umap-icon-active {
    opacity: 1.0 !important;
    box-shadow: var(--block-shadow);
}

.umap-ball-icon .icon-container {
    background-color: darkblue;
    background: radial-gradient(circle at 6px 38%, white -4px, darkblue 8px) repeat scroll 0 0 transparent;
    border-radius: 8px 8px 8px 8px;
    box-shadow: 1px 21px 6px -3px black;
    height: 16px;
    opacity: 0.9;
    text-align: center;
    width: 16px;
}

.umap-ball-icon.umap-icon-active .icon-container {
    border-radius: 10px 10px 10px 10px;
    box-shadow: 1px 23px 7px -1px black;
    margin-inline-start: -2px;
    margin-top: -4px;
    height: 20px;
    opacity: 1.0 !important;
    width: 20px;
}

.umap-ball-icon .icon-arrow {
    background-color: black;
    height: 16px;
    inset-inline-start: 7px;
    opacity: 0.9;
    position: relative;
    top: -1px;
    width: 2px;
}

.umap-icon-active {
    opacity: 1.0 !important;
}

.umap-edit-enabled .readonly {
    cursor: not-allowed;
}

.umap-raw-icon {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    overflow: hidden;
}

.umap-raw-icon img {
    object-fit: contain;
}

.umap-raw-icon.umap-icon-active {
    box-shadow: var(--block-shadow);
}

.umap-cluster-icon {
    border-radius: 50%;
    border: 4px solid white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: bold;
}

.leaflet-overlay-pane > svg {
    z-index: var(--zindex-orphan-marker);
}

/* ********************************* */
/*         Ajax loader               */
/* ********************************* */
.umap-loader {
    width: 100%;
    height: 6px;
    display: inline-block;
    position: absolute;
    background: var(--color-brightCyan);
    overflow: hidden;
    display: none;
    top: 0;
    left: 0;
    right: 0;
    height: 4px;
    z-index: var(--zindex-loader);
}

.umap-loader::after {
    content: '';
    box-sizing: border-box;
    width: 0;
    height: 4.8px;
    background: var(--color-darkerGray);
    position: absolute;
    top: 0;
    left: 0;
    animation: animFw 10s linear infinite;
}

@keyframes animFw {
    0% {
        width: 0;
    }

    100% {
        width: 100%;
    }
}

.umap-loading .umap-loader {
    display: block;
}

/* *************************** */
/* Overriding leaflet defaults */
/* *************************** */

.leaflet-control-zoom a,
.leaflet-control-zoom a:hover {
    height: var(--control-size);
    width: var(--control-size);
    line-height: var(--control-size);
}

.leaflet-container .leaflet-control-zoom {
    margin-inline-start: 10px;
}

.leaflet-top,
.leaflet-bottom {
    z-index: var(--zindex-controls);
}

.leaflet-inplace-toolbar {
    z-index: var(--zindex-toolbar) !important;
}

.leaflet-inplace-toolbar a {
    background-image: url('./img/16-white.svg');
    background-color: var(--color-darkGray) !important;
}

.leaflet-inplace-toolbar a:hover {
    background-color: #353c3e !important;
}

.leaflet-touch .leaflet-control-layers,
.leaflet-touch .leaflet-bar {
    border-width: 1px;
}

.leaflet-touch .leaflet-bar a {
    width: var(--control-size);
    height: var(--control-size);
    line-height: var(--control-size);
}

/* Links are dark cyan by default  */
.leaflet-container a {
    color: var(--color-veryDarkCyan);
}

/* But not in controls  */
.leaflet-bar a {
    color: black;
}

/* ****** */
/* Mobile */
/* ****** */

@media all and (max-width: 980px) {

    .umap-main-edit-toolbox .umap-user span,
    .leaflet-container .leaflet-control-edit-save span,
    .leaflet-container .leaflet-control-edit-disable span,
    .leaflet-container .edit-cancel span {
        display: none;
    }

    .umap-main-edit-toolbox .umap-help-button {
        display: none;
    }

    .umap-main-edit-toolbox .umap-user {
        margin-inline-end: 10px;
    }
}

@media all and (max-width: 640px) {
    .umap-main-edit-toolbox .umap-user {
        display: none;
    }

    .umap-main-edit-toolbox .map-name {
        max-width: 150px;
    }
}

@media all and (max-width: 480px) {

    .umap-edit-enabled {
        --header-height: 80px;
    }

    .leaflet-control-layers-expanded label {
        display: inline-block;
        margin-inline-end: 10px;
    }

    .leaflet-control-layers-expanded {
        margin-inline-start: 10px;
    }

    .umap-permanent-credits-container {
        max-width: 100%;
    }

    .attribution-toggle {
        display: inline-block;
    }

    .attribution-container {
        display: none;
    }

    .leaflet-control-attribution:active .attribution-container,
    .leaflet-control-attribution:hover .attribution-container {
        display: inline;
        background-color: #fff;
    }

    .leaflet-control-attribution:hover .attribution-toggle {
        display: none;
    }


}

/* ****** */
/* Print  */
/* ****** */

@media print {

    .leaflet-control-container {
        display: none;
    }
}

